@@ -12,12 +12,10 @@
 ##############################################################################
 
 import logging
-from AccessControl.PermissionRole import PermissionRole
-import AccessControl.Permission
 
-class ApplicationDefaultPermissions:
-    _View_Permission='Manager', 'Anonymous'
-    _Access_contents_information_Permission='Manager', 'Anonymous'
+from AccessControl.Permission import ApplicationDefaultPermissions # BBB
+from AccessControl.Permission import registerPermissions
+from AccessControl.PermissionRole import PermissionRole
 
 
 def default__class_init__(self):
@@ -66,7 +64,7 @@ def default__class_init__(self):
             break
 
     if self.__dict__.has_key('__ac_permissions__'):
-        AccessControl.Permission.registerPermissions(self.__ac_permissions__)
+        registerPermissions(self.__ac_permissions__)
         for acp in self.__ac_permissions__:
             pname, mnames = acp[:2]
             if len(acp) > 2:
